--- a/index.html
+++ b/index.html
@@ -102,36 +102,29 @@
         </td></tr> -->
         <tr><td>
           <heading><font color="#000080">General Information</font></heading>
-          <p><b>Lecture Hours:</b> Tue Thu : 10:20 AM-11:40 AM; 2025.8.25 - 2025.12.11</p>
-          <p><b>Lecture Room:</b> Farrall Ag Eng Hall 116</p>
-          <p><b>Piazza:</b> <a href="https://piazza.com/msu/fall2025/cse482">https://piazza.com/msu/fall2025/cse482</a></p>
+          <p><b>Lecture Hours:</b> Mon Wed : 10:20 AM-11:40 AM; 2026.1.12 - 2026.4.26</p>
+          <p><b>Lecture Room:</b> Olds Hall 111</p>
+          <!-- <p><b>Piazza:</b> <a href="https://piazza.com/msu/fall2025/cse482">https://piazza.com/msu/fall2025/cse482</a></p> -->
           <heading><font color="#000080">Instructor</font></heading>
-          <p>Prof. Jiliang Tang</p>
-          <p><b>Email:</b> tangjili at msu dot edu</p>
-          <!-- <p><b>Office Hours:</b> Friday 9:00 AM - 10:00 AM </p>
-          <p><b>Office Room:</b> Engineering Building 2142</p> -->
-
-          <!-- <p><a href="https://engineering.msu.edu/faculty/Hamid-Karimian">Prof. Hamid Karimian</a></p>
-          <p><b>Email:</b> karimian at msu dot edu</p>
-          <p><b>Office Hours:</b> Mon Wed, 12:00 PM - 12:30 PM</p>
-          <p><b>Office Room:</b> EB 3501</p> -->
-          <heading><font color="#000080">Co-instructors</font></heading>
-          <p>Haoyu Han</p>
-          <p><b>Email:</b> hanhaoy1 at msu dot edu</p>
-
-          <p>Hang Li</p>
-          <p><b>Email:</b> lihang4 at msu dot edu</p>
+          <heading>Instructors</heading>
+          <p><b><a href="https://www.egr.msu.edu/people/profile/liuhui7" target="_blank" rel="noopener">Prof. Hui Liu</a></b></p>
+          <p><b>Email:</b> liuhui7 [at] msu [dot] edu</p>
 
           <heading><font color="#000080">Teaching Assistants</font></heading>
-          <p>Jingzhe Liu</p>
-          <p><b>Email:</b> liujin33 at msu dot edu</p>
-          <p><b>Office Hours:</b> Tue, 5:00 PM - 6:00 PM</p>
-          <p><b>Office Room:</b> EB 2245</p>
+          <p>Yu Song</p>
+          <p><b>Email:</b> songyu5 [at] msu [dot] edu</p>
+          <p><b>Office Hours:</b> TBA </p>
+          <p><b>Office Room:</b> TBA </p>
 
-          <p>Shenglai Zeng</p>
-          <p><b>Email:</b> zengshe1 at msu dot edu</p>
-          <p><b>Office Hours:</b> Thu, 5:00 PM - 6:00 PM </p>
-          <p><b>Office Room:</b> EB 1300 </p>
+          <p>Shen Dong</p>
+          <p><b>Email:</b> dongshe1 [at] msu [dot] edu</p>
+          <p><b>Office Hours:</b> TBA </p>
+          <p><b>Office Room:</b> TBA </p>
+
+          <p>Md Alamin</p>
+          <p><b>Email:</b> alaminmd@msu.edu</p>
+          <p><b>Office Hours:</b> TBA </p>
+          <p><b>Office Room:</b> TBA </p>
 
 
           <heading><font color="#000080">Requisites</font></heading>
