--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <tbody><tr>
         <td width="100%" valign="middle">
         <p align="center">
-          <name>CSE 482 Big Data Analysis (Fall 2025)</name>
+          <name>CSE 482 Big Data Analysis (Spring 2026)</name>
           <span style="display:inline-block; width: 50;"></span>
         </p>
         <p>
@@ -111,12 +111,12 @@
           <p><b>Email:</b> liuhui7 [at] msu [dot] edu</p>
 
           <heading><font color="#000080">Teaching Assistants</font></heading>
-          <p>Yu Song</p>
+          <p><a href="https://songyyyy.github.io/" target="_blank" rel="noopener">Yu Song</a></p>
           <p><b>Email:</b> songyu5 [at] msu [dot] edu</p>
           <p><b>Office Hours:</b> TBA </p>
           <p><b>Office Room:</b> TBA </p>
 
-          <p>Shen Dong</p>
+          <p><a href="https://dsh3n77.github.io/" target="_blank" rel="noopener">Shen Dong</a></p>
           <p><b>Email:</b> dongshe1 [at] msu [dot] edu</p>
           <p><b>Office Hours:</b> TBA </p>
           <p><b>Office Room:</b> TBA </p>
