--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         background-color: #ffffd0;
     }
   </style>
-  <title>cse482 (Fall 2025)</title>
+  <title>cse482 (Spring 2026)</title>
 
   <link href="./temp_files/css" rel="stylesheet" type="text/css">
   </head>
@@ -72,7 +72,7 @@
           <span style="display:inline-block; width: 50;"></span>
         </p>
         <p>
-        This course is intended for senior undergraduate students who are interested to gain hands-on experience applying computational techniques to solve big data analysis problems. Examples of such problems include: How to detect trending topics in social media data? How to predict customers who would churn to a competitor? How to design a large-scale recommender system? Students will learn the basic techniques and programming tools that can be used to provide answers to such questions.
+        This course is intended for senior undergraduate students who are interested in gaining hands-on experience applying computational techniques to solve big data analysis problems. Examples of such problems include: How to detect trending topics in social media data? How to predict customers who would churn to a competitor? How to design a large-scale recommender system? Students will learn the basic techniques and programming tools that can be used to provide answers to such questions.
         </p>
         </td>
       </tr>
@@ -106,7 +106,6 @@
           <p><b>Lecture Room:</b> Olds Hall 111</p>
           <!-- <p><b>Piazza:</b> <a href="https://piazza.com/msu/fall2025/cse482">https://piazza.com/msu/fall2025/cse482</a></p> -->
           <heading><font color="#000080">Instructor</font></heading>
-          <heading>Instructors</heading>
           <p><b><a href="https://www.egr.msu.edu/people/profile/liuhui7" target="_blank" rel="noopener">Prof. Hui Liu</a></b></p>
           <p><b>Email:</b> liuhui7 [at] msu [dot] edu</p>
 
