--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
           <heading><font color="#000080">Teaching Assistants</font></heading>
           <p><a href="https://songyyyy.github.io/" target="_blank" rel="noopener">Yu Song</a></p>
           <p><b>Email:</b> songyu5 [at] msu [dot] edu</p>
-          <p><b>Office Hours:</b> TBA </p>
-          <p><b>Office Room:</b> TBA </p>
+          <p><b>Office Hours:</b> Tuesday 10:00-11:00 am </p>
+          <p><b>Office Room:</b> Engineer Building 1230 </p>
+          <p><b>Office Hours:</b> Friday 4:00-5:00 pm </p>
+          <p><b>Office Room:</b> Engineer Building 1300 </p>
 
           <p><a href="https://dsh3n77.github.io/" target="_blank" rel="noopener">Shen Dong</a></p>
           <p><b>Email:</b> dongshe1 [at] msu [dot] edu</p>
-          <p><b>Office Hours:</b> TBA </p>
-          <p><b>Office Room:</b> TBA </p>
+          <p><b>Office Hours:</b> Monday 8:00-9:00 am </p>
+          <p><b>Office Room:</b> Engineer Building 1225 </p>
+          <p><b>Office Hours:</b> Wednesday 4:00-5:00 pm </p>
+          <p><b>Office Room:</b> Engineer Building 3400 </p>
 
           <p>Md Alamin</p>
           <p><b>Email:</b> alaminmd@msu.edu</p>
