--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
           <p>Md Alamin</p>
           <p><b>Email:</b> alaminmd@msu.edu</p>
-          <p><b>Office Hours:</b> TBA </p>
-          <p><b>Office Room:</b> TBA </p>
+          <p><b>Office Hours:</b> Thursday 3:00 - 4:00 PM </p>
+          <p><b>Office Room:</b> Engineer Building 1220 </p>
 
 
           <heading><font color="#000080">Requisites</font></heading>
