--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
           <p><a href="https://dsh3n77.github.io/" target="_blank" rel="noopener">Shen Dong</a></p>
           <p><b>Email:</b> dongshe1 [at] msu [dot] edu</p>
-          <p><b>Office Hours:</b> Monday 8:00-9:00 am </p>
+          <p><b>Office Hours:</b> Monday 2:00-3:00 pm </p>
           <p><b>Office Room:</b> Engineer Building 1225 </p>
           <p><b>Office Hours:</b> Wednesday 4:00-5:00 pm </p>
           <p><b>Office Room:</b> Engineer Building 3400 </p>
